<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey_f2f2f2"
    android:paddingHorizontal="@dimen/_24sdp"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/otp_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/enter_otp"
        android:textSize="@dimen/_14ssp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_48sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <EditText
        android:id="@+id/et_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:inputType="number"
        android:maxLength="6"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintTop_toBottomOf="@+id/otp_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/design_default_color_primary"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:hint="Enter OTP" />

    <TextView
        android:id="@+id/tv_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_otp"
        app:layout_constraintTop_toBottomOf="@+id/et_otp"
        android:textColor="@color/red"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_timeleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="29"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/et_otp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="parent"/>




    <TextView
        android:id="@+id/button_submit"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:paddingVertical="@dimen/_12sdp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_resend"
        android:layout_marginBottom="@dimen/_20sdp"

        />



</androidx.constraintlayout.widget.ConstraintLayout>